# Splotch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Tutorial.ipynb  noxfile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yaml
Science/: LICENSE
Science/human/: README.md  splotch_human.stan
Science/mouse/: README.md
examples/: metadata.tsv
examples/Annotations/: L7CN36_C2.tsv  L7CN69_D1.tsv
human/: README.md  data_SNAP25.R
mouse/: README.md  splotch_mouse.stan
splotch/: __init__.py  utils.py
src/splotch/: __init__.py  dataclasses.py  inference.py  models.py  registration.py  utils.py  visualization.py
stan/: splotch_stan_model.stan
tests/: test_splotch.py
tutorials/als_st/: Tutorial.ipynb  Tutorial_map_methods.ipynb  Tutorial_priors.ipynb  metadata.tsv
tutorials/als_st/annotations/: CN93_E1.tsv  CN93_E2.tsv  CN96_E1.tsv  CN96_E2.tsv  L7CN30_C1.tsv  L7CN30_C2.tsv  L7CN36_C1.tsv  L7CN69_D2.tsv
tutorials/olfactory_bulb_st/: metadata.tsv
tutorials/olfactory_bulb_st/annotations/: 01_01.tsv  02_01.tsv  03_01.tsv  04_01.tsv  05_01.tsv  06_01.tsv  07_01.tsv  08_01.tsv  09_01.tsv  10_01.tsv  11_01.tsv  12_01.tsv
